--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -209,7 +209,7 @@ We have data on control- and treatment-group members through age $a^{\ast}$. We 
 
 Making valid forecasts of out-of-sample treatment effects does not require making valid forecasts of separate out-of-sample treatment and control profiles. Only valid forecasts of their difference are required.
 
-Nonetheless, in this paper we focus on making valid forecasts of separate treatment and control profiles after age $a^*$. Doing so allows us to test the validity of our methodology by comparing (within the support of the experimental sample) outcomes by treatment status for the experimental control and treatment groups with those from the synthetic control and treatment groups we generate. Comparisons between the experimental control group and the synthetic control group are particularly compelling because neither group receives treatment.\footnote{Although some might be attending other centers. We control for participation in Head Start in our auxiliary samples. Doing so does not substantially affect our estimates.} Because all persons in the experimental sample who are offered treatment accept it, it is straightforward to construct synthetic control groups in auxiliary samples using only eligibility criteria.
+Nonetheless, in this paper we focus on making valid forecasts of separate treatment and control profiles after age $a^*$. Doing so allows us to test the validity of our methodology by comparing (within the support of the experimental sample) outcomes by treatment status for the experimental control and treatment groups with those from the synthetic control and treatment groups we generate. Comparisons between the experimental control group and the synthetic control group are particularly compelling because neither group receives treatment.\footnote{Although some might be attending other centers. We control for participation in Head Start in our auxiliary samples. Doing so does not substantially affect our estimates. The raw difference in the net present values between treatment and control labor income is 81,230 (123,210) for females (males). This is compared to 55,720 (153,140) for the baseline estimates. This is example with labor income shows that, if anything, we are underestimating the treatment effect by not including Head Start.} Because all persons in the experimental sample who are offered treatment accept it, it is straightforward to construct synthetic control groups in auxiliary samples using only eligibility criteria.
 
 There are two distinct stages in our analysis. In Stage I, we construct samples of individuals in the auxiliary samples with characteristics similar to the individuals in the experimental sample. The minimal set of characteristics includes the background variables $\bm{B} \in \mathcal{B}_0$. We use a coarse form of matching based on Algorithm~\ref{alg:match} in  Appendix~\ref{appendix:match}. In Stage II, we build models using these samples to forecast out-of-sample outcomes separately for the outcomes of the treated and the controls.
 
