--- a/abc_comprehensivecba.tex
+++ b/abc_comprehensivecba.tex
@@ -49,7 +49,7 @@ University of Southern California}
 \singlespacing
 \thispagestyle{empty}
 \begin{abstract}
-\noindent This paper quantifies the life-cycle benefits of a widely implemented early childhood program targeting disadvantaged families. It was evaluated by random assignment. We join experimental data with non-experimental data using economic models to forecast the life-cycle benefits. Our baseline estimate of the internal rate of return (benefit/cost ratio) is 13.7\% (7.3). We conduct extensive sensitivity analyses to account for model estimation error, model pretesting, and judgments made about the empirical magnitudes of non-market treatment effects. We examine the performance of widely used, \textit{ad hoc} estimates of long-term benefits based on childhood test scores and find them wanting. \textbf{[WC: 98]}
+\noindent This paper quantifies the life-cycle benefits of a widely implemented early childhood program targeting disadvantaged families that was evaluated by random assignment. We join experimental data with non-experimental data using economic models to forecast the life-cycle benefits. Our baseline estimate of the internal rate of return (benefit/cost ratio) is 13.7\% (7.3). We conduct extensive sensitivity analyses to account for model estimation error, model pretesting, and judgments made about the empirical magnitudes of non-market benefit. We examine the performance of widely used, \textit{ad hoc} estimates of long-term benefits based on childhood test scores and find them wanting. 
 \end{abstract}
 
 \noindent \textbf{Keywords}: Childcare, early childhood education, life-cycle benefits, long-term forecasts, rates of return. \\
@@ -125,7 +125,7 @@ Figure~\ref{figure:main} previews our findings. It displays the discounted (usin
 \includegraphics[width=.7\columnwidth]{output/venn_pooled.pdf}
 \floatfoot{
 \footnotesize
-Note: This figure presents all possible combinations of accounting for the benefits from the four major categories in our analysis. The non-overlapping areas present estimates accounting for a single category as the benefit. When two categories overlap, these are the benefits that we account for. And so on for the rest of the plot. The costs remain constant across all calculations and are the same as in Figure~\ref{figure:main}. Inference is based on non-parametric, one-sided $p$-values from the empirical bootstrap distribution. We bold point estimates significant at the $10\%$ level.\\}
+Note: This figure presents all possible combinations of accounting for the benefits from the four major categories in our analysis. The non-overlapping areas present estimates accounting for a single category as the benefit. When two categories overlap, these are the benefits that we account for. And so on for the rest of the plot. The costs remain constant across all calculations and are the same as in Figure~\ref{figure:main}. Inference is based on non-parametric, one-sided $p$-values from the empirical bootstrap distribution. We put boxes around point estimates that are significant at the $10\%$ level.\\}
 \end{figure}
 
 Figure~\ref{figure:vennpooled} summarizes the results from our extensive sensitivity analyses. It shows the estimated rates of return and benefit/cost ratios when we calculate our estimates under the assumption of only one stream being the benefit. We further recalculate the estimates with all possible combinations of the main benefit and cost streams. Our measures of economic efficiency remain statistically and economically significant even after eliminating the benefits from any one of the four main components that we monetize. No single component drives our results. We report estimates from a variety of specifications of regressors and functional forms. Our estimates are robust to different plausible assumptions about the values of non-market outcomes, for which conventional estimates of standard errors are not available.
@@ -199,7 +199,7 @@ $^*$When not observed, we impute based on the national arrest-sentence ratio  fr
 \end{threeparttable}
 \end{sidewaystable}
 
-This section explains our strategy for constructing out-of-sample treatment effects.\footnote{ Appendix~\ref{appendix:gmm} gives details of our step-by-step procedure and states its identification and estimation strategy in the Generalized Method of Moments framework.} Our approach builds on the analysis of \citet{Heckman_Pinto_etal_2013_PerryFactor}, who show that, for the Perry Preschool program, the effect of treatment on outcomes operates through its effects on measured inputs in a stable production function rather than through shifts in the production function. If this is also true for ABC/CARE, it greatly facilitates our projection analysis. We test and do not reject the hypothesis that the treatment works by shifting the inputs and not the production function using the ABC/CARE data.
+This section explains our strategy for constructing out-of-sample treatment effects.\footnote{ Appendix~\ref{appendix:gmm} gives details of our step-by-step procedure and states its identification and estimation strategy in the Generalized Method of Moments framework.} Our approach builds on the analysis of \citet{Heckman_Pinto_etal_2013_PerryFactor}, who show that, for the Perry Preschool program, the effect of treatment on outcomes operates through its effects on measured inputs in a stable production function rather than through shifts in the production function. If this is also true for ABC/CARE, it greatly facilitates our projection analysis. We test and do not reject the hypothesis that treatment works by shifting inputs and not the production function using the ABC/CARE data.
 
 Table~\ref{table:sources} presents the outcomes for which we conduct these analyses and summarizes the methodology and auxiliary samples used. We focus on labor income to illustrate our approach, but a similar methodology is used to forecast other outcomes.\footnote{We do not monetize the loss of leisure and household production that individuals experience from working (this applies both to the individuals in the program and to their parents). The reasons for this are two-fold: (i) we lack information on intensive-margin labor supply; and (ii) different labor supply models and market structures have different implications with respect to the value of nonmarket time. In addition, our data are not well-suited for estimating a structural model of labor supply. We note, however, that the benefit/cost ratio and internal rate of return are both statistically significant and substantial after removing any benefits from labor income entirely (see Table~\ref{table:cba}). This exercise corresponds to a one-to-one loss of leisure given the gain in labor income, i.e. for each additional dollar an individual makes, she loses the same dollar of (monetized) leisure and household production.}$^,$\footnote{Our calculations are based on labor income gross of tax, because we want to quantify the effects of the program on the gross output that an individual is able to produce. A rise in gross labor income increases the taxable base and has an implied increase in deadweight loss. We do not quantify that deadweight loss because: (i) we do not have enough information to make full use of standard tax simulators; and (ii) we are not able to vary the standard tax simulators to assess estimation uncertainty.}
 
@@ -209,7 +209,7 @@ We have data on control- and treatment-group members through age $a^{\ast}$. We 
 
 Making valid forecasts of out-of-sample treatment effects does not require making valid forecasts of separate out-of-sample treatment and control profiles. Only valid forecasts of their difference are required.
 
-Nonetheless, in this paper we focus on making valid forecasts of separate treatment and control profiles after age $a^*$. Doing so allows us to test the validity of our methodology by comparing (within the support of the experimental sample) outcomes by treatment status for the experimental control and treatment groups with those from the synthetic control and treatment groups we generate. Comparisons between the experimental control group and the synthetic control group are particularly compelling because neither group receives treatment.\footnote{Although some might be attending other centers. We control for participation in Head Start in our auxiliary samples. Doing so does not substantially affect our estimates. The raw difference in the net present values between treatment and control labor income is 81,230 (123,210) for females (males). This is compared to 55,720 (153,140) for the baseline estimates. This is example with labor income shows that, if anything, we are underestimating the treatment effect by not including Head Start.} Because all persons in the experimental sample who are offered treatment accept it, it is straightforward to construct synthetic control groups in auxiliary samples using only eligibility criteria.
+Nonetheless, in this paper we focus on making valid forecasts of separate treatment and control profiles after age $a^*$. Doing so allows us to test the validity of our methodology by comparing (within the support of the experimental sample) outcomes by treatment status for the experimental control and treatment groups with those from the synthetic control and treatment groups we generate. Comparisons between the experimental control group and the synthetic control group are particularly compelling because neither group receives treatment.\footnote{Although some might be attending other centers. We control for participation in Head Start in our auxiliary samples. Doing so does not substantially alter our estimates. The raw difference in the net present values between treatment and control labor income is 81,230 (123,210) for females (males). This is compared to 55,720 (153,140) for the baseline estimates. We underestimate the treatment effect by not conditioning on Head Start.} Because all persons in the experimental sample who are offered treatment accept it, it is straightforward to construct synthetic control groups in auxiliary samples using only eligibility criteria.
 
 There are two distinct stages in our analysis. In Stage I, we construct samples of individuals in the auxiliary samples with characteristics similar to the individuals in the experimental sample. The minimal set of characteristics includes the background variables $\bm{B} \in \mathcal{B}_0$. We use a coarse form of matching based on Algorithm~\ref{alg:match} in  Appendix~\ref{appendix:match}. In Stage II, we build models using these samples to forecast out-of-sample outcomes separately for the outcomes of the treated and the controls.
 
@@ -388,21 +388,21 @@ This assumption has two distinct aspects: (i) the structural functions evaluated
 
 \subsubsection{Testable Implications}
 
-Assumption~\ref{ass:summary} combined with Assumption~\ref{ass:exog}, Equation~\eqref{eq:countersystem}, and the assumption of $\mathbb{E}(\varepsilon^d_{k,j,a})=0$ for all $a \in \{1,\dots,A\}$ enable us to write testable implications of our forecasting models. The test for the first aspect of invariance consists of asking if $\bm{X}_{e,a}^d$ and $\bm{B}$ predict treatment effects within the experimental sample for $Y_{e,j,a}$. Under the null hypothesis that \ref{ass:summary} is correct, a separate indicator variable for treatment status ($d$) is irrelevant when computing $\mathbb{E} \left[ Y_{e,j,a} | \bm{X}_{k,a}^d  = \bm{x}, \bm{B}_k =  \bm{b}, D = d \right]$. In  Appendix~\ref{app:invariance}, we test and do not reject the null hypothesis across a variety of outcomes.\footnote{This holds both when pooling males and females and when testing separately by gender (see  Appendix~\ref{app:invariance}).} The test for the second aspect of invariance is analogous, and we also fail to reject the null hypothesis implied by it (see Appendix~\ref{app:invariance}). In sum, exogeneity and invariance enable us to jointly test the two aspects of structural invariance for $a \leq a^*$, when $Y_{k,j,a}$ is observed in both the experimental and auxiliary samples: 
+Assumption~\ref{ass:summary} combined with Assumption~\ref{ass:exog}, Equation~\eqref{eq:countersystem}, and the assumption $\mathbb{E}(\varepsilon^d_{k,j,a})=0$ for all $a \in \{1,\dots,A\}$ generate testable restrictions for our forecasting models. Exogeneity and invariance enable us to jointly test the two aspects of structural invariance for $a \leq a^*$, when $Y_{k,j,a}$ is observed in both the experimental and auxiliary samples:
 
 \begin{eqnarray}
 \mathbb{E} \left[ Y_{e,j,a}^1 | \bm{X}_{e,a}^1 = \bm{x}, \bm{B}_{e} = \bm{b}, D = 1   \right] &=&  \mathbb{E} \left[ Y_{e,j,a}^0 | \bm{X}_{e,a}^0 = \bm{x}, \bm{B}_{e} = \bm{b}, D = 0   \right] \\
 \mathbb{E} \left[ Y_{e,j,a}^d | \bm{X}_{e,a}^d = \bm{x}, \bm{B}_{e} = \bm{b}, D = d   \right] &=&  \mathbb{E} \left[ Y_{n,j,a} | \bm{X}_{n,a} = \bm{x}, \bm{B}_{n} = \bm{b} \right] \text{ for }  d \in \{0,1\}.
 \end{eqnarray}
 
-We do not reject the null hypotheses of no differences in the conditional mean functions in the experimental and auxiliary samples conditioning on $\bm{X}_{k,a}^d$ and $\bm{B}_k, \: k \in \{e,n\}$.\footnote{This holds when pooling males and females and when testing separately by gender (see  Appendix~\ref{app:invariance}).} Under our assumptions, experimental treatment effects should equal differences in the conditional means of the non-experimental samples evaluated at $\bm{X}_{n,a} = \bm{x}^1$ and  $\bm{X}_{n,a} = \bm{x}^0$:
+We test and do not reject these hypotheses. See  Appendix~\ref{app:invariance}.\footnote{This holds when pooling males and females and when testing separately by gender (see  Appendix~\ref{app:invariance}).}  Under our assumptions, experimental treatment effects should equal differences in the conditional means of the non-experimental samples evaluated at $\bm{X}_{n,a} = \bm{x}^1$ and  $\bm{X}_{n,a} = \bm{x}^0$:
 
 \begin{eqnarray}
 \mathbb{E} \left[ Y_{e,j,a}^1 |  \bm{X}_{e,a}^1 = \bm{x}^1, \bm{B}_e = \bm{b}, D = 1 \right] - \mathbb{E} \left[ Y_{e,j,a}^0 |  \bm{X}_{e,a}^0 = \bm{x}^0, \bm{B}_e = \bm{b}, D = 0 \right] = \nonumber \\
 \mathbb{E} \left[ Y_{n,j,a} | \bm{X}_{n,a} = \bm{x}^1, \bm{B}_n = \bm{b} \right] - \mathbb{E} \left[ Y_{n,j,a} | \bm{X}_{n,a} = \bm{x}^0, \bm{B}_n = \bm{b} \right].
-\end{eqnarray} 
+\end{eqnarray}
 
-We report tests for this implication at $a \leq a^*$ in Section~\ref{sec:usingaux}.
+In Section~\ref{sec:usingaux}, we report tests of this hypothesis for $a \leq a^*$.
 
 \subsubsection{Summarizing the Implications of Exogeneity and Structural Invariance}
 
@@ -478,7 +478,7 @@ At each age, once we obtain the transition probability for each health outcome, 
 The models estimated using MCBS represent medical costs in the years 2007--2010. The MEPS estimation captures costs during 2008--2010. To account for real medical cost growth after 2010, we adjust each model's forecast using the method described in  Appendix~\ref{appendix:health-fam-simulation}.
 
 \begin{figure}[!htbp]
-\caption{Quality-Adjusted Life Years: Forecasts and Comparison to PSID \textbf{[JJH: Match not great] [JLG: A great concern, and I'm talking to Duncan to see if we can do better.] [JJH: Ok---what is the result? Looks like we greatly underestimate the PV of health benefits] [JLG: I'm still waiting on this. But an update will be here soon.] [JJH: Good] [JLG: one more day on this; sorry but things are moving slow in our other end.][JLG: I sent you an update on this by email. Not too much to be improved here.]}}\label{fig:qalys}
+\caption{Mean Quality-Adjusted Life Years: Forecasts and Comparison to PSID}\label{fig:qalys}
 \centering
 \includegraphics[width=.7\columnwidth]{output/qalyexppsid.eps}
 \floatfoot{
@@ -492,7 +492,7 @@ We estimate three models of medical spending: (i) medicare spending (annual medi
 
 We also calculate medical expenditure before age 30 (see Appendix~\ref{appendix:health-costs-before-age30}). The ABC/CARE interviews at ages 12, 15, 21 and 30 have information related to hospitalizations at different ages and number of births before age 30. We combine this information along with individual and family demographic variables to use MEPS to forecast medical spending for each age.
 
-QALYs are crucial for our cost/benefit analysis because they monetize the health of an individual at each age. Figure~\ref{fig:qalys} shows our estimation of QALYs together with a PSID comparison, in an exercise analogous to that used to produce Figure~\ref{fig:labor-income-profiles}.\footnote{In our baseline estimation, we assume that each year of life is worth  $\$150,000$ (2014 USD). Our estimates are robust to substantial variation in this assumption, as we show in  Appendix~\ref{appendix:sensitivity}.} Although there is not a clear age-by-age treatment effect on QALYs, there is a statistically and substantively significant difference in the accumulated present value of the QALYs between the treatment and the control groups. The QALYs for individuals in the control group match the QALYs of disadvantaged individuals in the PSID.\footnote{In  Appendix~\ref{appendix:health} we further discuss and justify the parameterizations required to obtain estimates of QALYs. \citet{Goldman_etal_2015_Future-America-Model} examine the sensitivity to these parameterizations and discuss alternative micro-simulations monetizing health condition.}
+QALYs are crucial for our cost/benefit analysis because they monetize the health of an individual at each age. Figure~\ref{fig:qalys} plots our estimates of mean QALYs together with a PSID comparison, in an exercise analogous to that used to produce Figure~\ref{fig:labor-income-profiles}.\footnote{In our baseline estimation, we assume that each year of life is worth  $\$150,000$ (2014 USD). Our estimates are robust to substantial variation in this assumption, as we show in  Appendix~\ref{appendix:sensitivity}.} Although there is not a clear age-by-age treatment effect on QALYs, there is a statistically and substantively significant difference in the accumulated present value of the QALYs between the treatment and the control groups. The QALYs for female individuals in the control group match the QALYs of disadvantaged individuals in the PSID. For males, use of the PSID auxiliary sample to constant controls likely understates the net benefits of ABC/CARE.\footnote{In  Appendix~\ref{appendix:health} we further discuss and justify the parameterizations required to obtain estimates of QALYs. \citet{Goldman_etal_2015_Future-America-Model} examine the sensitivity to these parameterizations and discuss alternative micro-simulations monetizing health condition.}
 
 \subsection{Forecasting Parental Labor Income} \label{section:pincome}
 
@@ -636,7 +636,7 @@ This paper goes beyond analyzing batteries of short-term of treatment effects on
 
 Our analysis accounts for many sources of statistical and modeling uncertainty. We go beyond current simplistic analyses that quantify a single, short-term treatment effect to forecast labor income without providing a sense of statistical and modeling uncertainty. We quantify long-term costs and benefits and provide a life-cycle analysis. We quantify and monetize health outcomes, a novel outcome in the evaluation of early childhood programs.
 
-We demonstrate the benefits of economic and econometric theory, and auxiliary data sets, for evaluating the long-term benefits of a social experiment. Our forecasts rely on economic models and on testable assumptions about functional form relationships which we are able to test. We show the robustness of our estimates through extensive empirical sensitivity analyses. We produce baseline estimates and then provide a wide array of estimates, for readers to analyze what the estimates would be under assumptions that they found most plausible. Our estimates of the internal rate of return (benefit/cost ratio) range from 8.0\% to 18.3\% (1.52 to 17.40). Investing in this program is highly profitable.
+We demonstrate the benefits of economic and econometric theory, and auxiliary data sets, for evaluating the long-term benefits of a social experiment. Our forecasts rely on economic models and on testable assumptions about functional form relationships which we are able to test. We show the robustness of our estimates through extensive empirical sensitivity analyses. We produce baseline estimates and then provide a wide array of estimates, for readers to analyze what the estimates would be under assumptions that they found most plausible. Our estimates of the internal rate of return (benefit/cost ratio) range from 8.0\% to 18.3\% (1.52 to 17.40). Investing in this program is highly socially profitable.
 
 \clearpage
 
