edits from 5/18 with tanya's proofing

--- a/AppOutput/Methodology/nonipw_vars.tex
+++ b/AppOutput/Methodology/nonipw_vars.tex
@@ -15,9 +15,9 @@ Graduated High School	&		NA	\\
 Attended Vocation/Tech/Community College	&	NA	\\
 Years of Education	&	30	\\
 Ever Had Special Education 			& NA \\
-Total Number of Special Education 	& NA \\
+Total Number of Years in Special Education 	& NA \\
 Ever Retained						& NA \\
-Total Number of Retention			& NA \\
+Total Number of Retained Grades			& NA \\
 Employed	&	30	\\
 Labor Income &  21, 30 \\
 Transfer Income &  30 \\
