--- a/Appendices/Methodology_Alt.tex
+++ b/Appendices/Methodology_Alt.tex
@@ -6,7 +6,6 @@ This appendix presents our approach to identifying and estimating life-cycle tre
 
 We classify a variable as complete data when we observe the data for at least 85\% of the individuals in the sample. Table~\ref{table:nonipw} lists the variables that are completely observed. For these outcomes, we estimate the standard errors of our estimates by resampling the ABC/CARE data. We estimate non-parametric $p$-values based on the bootstrap distribution. We perform inference in this same way throughout the paper.
 
-\textbf{[TR: In the table below, do you mean to say ``Total Years of Education" instead of ``Total Number of special education"? What are the ``Ever Retained'' and ``Total Number Retained'' lines referring to?]}
 \begin{table}[H]
 \begin{threeparttable}
 \caption{Variables Estimated without IPW Adjustment}
@@ -101,13 +100,13 @@ and
 
 \noindent We do not observe certain post-$a^*$ life-cycle profiles for outcomes that are important for estimating the lifetime benefits of ABC/CARE. The main examples are parental labor income, subject labor income, public-transfer income, and health-related outcome variables. ABC/CARE provided full-day childcare. It relaxed the time constraints of the mothers of the treated children, who were able to work more. Potentially, it might shift the life-cycle profiles of the mothers, either by allowing them to take more schooling or obtain more work experience. We estimate these profiles. Similarly, a comprehensive evaluation accounts for the effect on the life-cycle profiles of subject labor income and public-transfer income. We follow the strategy outlined in Section~\ref{section:cbamethodology} and implemented in Section~\ref{section:cbaresults} to identify and estimate these profiles and forecast post-$a^\ast$ outcomes.\footnote{In this section, attrition or partial observations is not an issue: the predictors that we use to construct out-of-sample forecasts are classified as complete data (see Appendices~\ref{app:method_fullobs} and \ref{app:method_partialobs}).}.\\
 
-\noindent This appendix documents how we implement this strategy and provides complementary evidence supporting it, cited throughout the main text. We proceed as follows. Appendix~\ref{app:datasets} describes the auxiliary datasets that we use to forecast out of sample. Appendix~\ref{appendix:match} provides details on the matching strategy used to construct the synthetic or virtual treatment and controls groups. Appendix~\ref{appendix:pred} documents the variables that we use to make forecasts. The next three appendices provide tests for the key assumptions listed in Section~\ref{section:cbamethodology}: Appendix~\ref{app:containsupport} provides tests of Assumption~\ref{ass:contain}, Appendix~\ref{app:endogeneity} provides tests for Assumption~\ref{ass:exog}, and Appendix~\ref{app:invariance} provides tests for Assumption~\ref{ass:summary}.\footnote{We provide tests for Assumption~\ref{ass:alignment} in the main text. \textbf{[TR: Maybe specify that this is in section 3.3.1 in the main text]}} As in the main text, our forecasting strategy for a subject's transfer and labor income are treated jointly because we follow the same strategy---although we provide some separate details when necessary. \textbf{[TR: Suggestion to rewrite previous sentence ``As in the main text, our forecasting strategy treats a subject's transfer and labor income jointly---although we provide some separate details when necessary.'']} For parental labor income we provide three different forecasting strategies and document them in Appendix~\ref{app:parentalincome}.\\
+\noindent This appendix documents how we implement this strategy and provides complementary evidence supporting it, cited throughout the main text. We proceed as follows. Appendix~\ref{app:datasets} describes the auxiliary datasets that we use to forecast out of sample. Appendix~\ref{appendix:match} provides details on the matching strategy used to construct the synthetic or virtual treatment and controls groups. Appendix~\ref{appendix:pred} documents the variables that we use to make forecasts. The next three appendices provide tests for the key assumptions listed in Section~\ref{section:cbamethodology}: Appendix~\ref{app:containsupport} provides tests of Assumption~\ref{ass:contain}, Appendix~\ref{app:endogeneity} provides tests for Assumption~\ref{ass:exog}, and Appendix~\ref{app:invariance} provides tests for Assumption~\ref{ass:summary}.\footnote{We provide tests for Assumption~\ref{ass:alignment} in Section~\ref{sec:accoutning-age-period-cohort}.} As in the main text, our forecasting strategy treats a subject's transfer and labor income jointly---although we provide some separate details when necessary. For parental labor income we provide three different forecasting strategies and document them in Appendix~\ref{app:parentalincome}.\\
 
 \noindent We devote separate appendices to the discussion of crime and health forecasts in Appendix~\ref{appendix:crime} and Appendix~\ref{appendix:health}, respectively.
 
 \subsubsection{Overview of Our Approach and A Summary of Findings}
 
-\noindent As noted in the text, the principal empirical strategy used in this paper is developed and implemented in two stages. \textbf{[TR: May want to be specific here and reference Section 3.2, which outlines the two step empirical strategy]} In Stage I, we find comparison groups that are ``comparable.'' This can be thought of as a type of coarse matching on $B \in \mathcal{B}_0$. Stage II uses the constructed samples to build models to make out of (experimental) sample forecasts, assuming structural invariance (Assumption~\ref{ass:summary}). \\
+\noindent As noted in Section~\ref{sec:usingaux}, the principal empirical strategy used in this paper is developed and implemented in two stages. In Stage I, we find comparison groups that are ``comparable.'' This can be thought of as a type of coarse matching on $B \in \mathcal{B}_0$. Stage II uses the constructed samples to build models to make out of (experimental) sample forecasts, assuming structural invariance (Assumption~\ref{ass:summary}). \\
 
 \noindent We rely primarily on a parametric model based approach that estimates Equation~\eqref{eq:outcome} in the main text in the experimental and comparison samples and extrapolates using the comparison samples. As noted in the text, under exogeneity and structural invariance, which we test for and do not reject, we can combine the two stages in a single stage matching procedure that finds counterparts to the experimental samples and controls in our auxiliary samples. We report agreement between the main estimates reported in the paper and the matching estimates. We find a surprising robustness across approaches in our estimates that inspires confidence in the benefit/cost estimates reported in the text.\\
 
@@ -138,7 +137,7 @@ and
 \noindent Before summarizing, note that in general: (i) \textbf{we use the CNLSY to predict from ages 21 to 29}; and (ii) we use the NLSY79 and PSID to forecast from ages 29 to 79. Whenever using the NLSY79 and PSID together, we combine them and use them as a joint sample. Put differently, we use the three data sets to obtain information across our time span of interest \textit{without placing specific weights in any particular samples}. This allows us to satisfy support conditions (see Appendix~\ref{app:containsupport}) over the forecasted variables and the predictors that we use. An alternative to this is to to weight each of the observations in these samples according to the inverse of their variance in a set of observed characteristics. We do not do this, and instead use the unweighted observations to then construct synthetic treatment and controls groups as we explain in Appendix~\ref{appendix:match}.\\
 
 \noindent \textbf{Summary: Initial Restrictions Placed on the Auxiliary Samples}\\
-When constructing the samples used to forecast transfer and labor income \textbf{[TR: Quick note: earlier in the section you talk about ``interpolating'' the subject's labor and transfer income. But for consistency's sake and to avoid confusion with the interpolation of PSID/NLSY data, it might be good to change those previous instances to say ``forecasting the subject's labor income'']}, we place the following restrictions on the admissible samples \textit{for all ages}. Additional restrictions are placed when forecasting the other outcomes, as we explain below.
+When constructing the samples used to forecast transfer and labor income, we place the following restrictions on the admissible samples \textit{for all ages}. Additional restrictions are placed when forecasting the other outcomes, as we explain below.
 \begin{enumerate}
 \item \textbf{NLSY79:} Black, labor income less than \$300,000 (2014 USD) at any given year; subjects born between 1957 and 1965.
 \item \textbf{PSID:} Black; birth year between 1945 and 1981.
@@ -500,7 +499,7 @@ Note: Panel (a) displays a factor score estimated based on the measurement syste
 
 \subsubsection{Testing Assumption~\ref{ass:summary}: Structural Invariance} \label{app:invariance}
 
-This appendix uses the framework presented in Appendix~\ref{app:endogeneity} to test Assumption~\ref{ass:summary}. The tests are made under the null hypothesis that Assumption~\ref{ass:exog} holds. In the main text \textbf{[TR: specifically, in section 3.3.5 (or Equation 10) of the main text]} we show that Assumption~\ref{ass:summary}, together with Assumption~\ref{ass:exog}, implies:
+This appendix uses the framework presented in Appendix~\ref{app:endogeneity} to test Assumption~\ref{ass:summary}. The tests are made under the null hypothesis that Assumption~\ref{ass:exog} holds. In Section~\ref{sec:structural-invariance} we show that Assumption~\ref{ass:summary}, together with Assumption~\ref{ass:exog}, implies:
 
 \begin{equation}\label{eq:invariancetestapp}
 \mathbb{E} \left[ Y_{k,j,a}^d | \bm{X}_{k,a}^d  = \bm{x}, \bm{B}_k = \bm{b}, D = d \right] = \mathbb{E} \left[ Y_{k,j,a} | \bm{X}^d_{k,a}  = \bm{x}, \bm{B}_k = \bm{b} \right],
@@ -852,7 +851,7 @@ for $a \in \{1,\dots,A\}$, $k \in \{e,n\}$, and $d \in \{0,1\}$.\\
 \end{sidewaystable}
 \end{comment}
 
-\noindent In the main text, \textbf{[TR: Specifically, in Section 3.3.5]} we show that Assumption~\ref{ass:summary}, together with Assumption~\ref{ass:exog}, implies equality of conditional expectations in the experimental and auxiliary samples.
+\noindent In Section~\ref{sec:structural-invariance} we show that Assumption~\ref{ass:summary}, together with Assumption~\ref{ass:exog}, implies equality of conditional expectations in the experimental and auxiliary samples.
 
 \begin{equation}\label{eq:withbetimplication}
 \mathbb{E} \left[ Y_{e,j,a} | \bm{X}^d_{e,a} = \bm{x}, \bm{B}_e = \bm{b} \right] = \mathbb{E} \left[ Y_{n,j,a} | \bm{X}^d_{n,a} = \bm{x}, \bm{B}_e = \bm{b} \right], \quad d \in \{0,1\}, \quad j \in \mathcal{J}_a.
@@ -953,11 +952,11 @@ Note: Panel (a) displays the net-present value (treatment less control) of paren
 \ln Y_{a} = \alpha + \beta \cdot \text{school}_{a} + \gamma_{1}  \cdot \text{experience}_{a} + \gamma_{2} \cdot {\text{experience}_{a}}^2 + \bm{\psi} \mathbf{X}_{a} + \eta_{a}, \label{eq:mincer}
 \end{equation}
 
-\noindent where variables are indexed by mother's age, $\ln Y_a$ is log-labor income at age $a$, experience and schooling are measured in years, $ \mathbf{X}_{a}$ are observed characteristics, and $\eta_{a}$ is an unobserved component. $\alpha, \beta, \gamma_{1}, \gamma_{2}, \bm{\psi}$ are parameters of the labor income equation.\footnote{We assign one dollar of income when parental labor income is reported to be zero.}\\
+\noindent where variables are indexed by mother's age, $\ln Y_a$ is log-labor income at age $a$, experience and schooling are measured in years, $ \mathbf{X}_{a}$ are observed characteristics, and $\eta_{a}$ is an unobserved component. $\alpha, \beta, \gamma_{1}, \gamma_{2}, \bm{\psi}$ are parameters of the labor income equation. \\
 
 \noindent The parameters characterizing the profile do not differ across the treatment and control groups in ABC/CARE. This assumption is analogous to Assumption~\ref{ass:summary}, which we test and fail to reject in Appendix~\ref{app:invariance}.\\
 
-\noindent We estimate the coefficients in \eqref{eq:mincer} using the sample of mothers in ABC/CARE. We pool the longitudinal information and estimate the coefficients using ordinary least squares. We use a standard Mincer measure of experience (age $-$ education $-$ 6). We assign one dollar to mothers with no labor income. \textbf{[TR: This makes footnote 86 a little redundant]} For mothers living with a working partner, we allocate $1/2$ of total parental labor income as $Y_{a}$. To validate our estimates within ABC/CARE, we estimate the coefficients \eqref{eq:mincer} using a sub-sample of disadvantaged mothers in the PSID.\footnote{We define disadvantaged as follows: Black, not married, labor income, education (at age 5 of child's participant), age and number of children (at age 5 of child's participant) in the same ranges as the ABC/CARE mothers, labor income below the 75th percentile. \textbf{[TR: Do you mean the 75th percentile of the ABC/CARE sample? Or of US labor income?]}} The coefficients characterizing \eqref{eq:mincer} in ABC/CARE and PSID for different combinations of control sets are in close agreement. We display them in Table~\ref{table:mincerpsid}.\\
+\noindent We estimate the coefficients in \eqref{eq:mincer} using the sample of mothers in ABC/CARE. We pool the longitudinal information and estimate the coefficients using ordinary least squares. We use a standard Mincer measure of experience (age $-$ education $-$ 6). We assign one dollar to mothers with no labor income. For mothers living with a working partner, we allocate $1/2$ of total parental labor income as $Y_{a}$. To validate our estimates within ABC/CARE, we estimate the coefficients \eqref{eq:mincer} using a sub-sample of disadvantaged mothers in the PSID.\footnote{We define disadvantaged as follows: Black, not married, labor income, education (at age 5 of child's participant), age and number of children (at age 5 of child's participant) in the same ranges as the ABC/CARE mothers, labor income below the 75th percentile in the PSID sample.} The coefficients characterizing \eqref{eq:mincer} in ABC/CARE and PSID for different combinations of control sets are in close agreement. We display them in Table~\ref{table:mincerpsid}.\\
 
 \begin{table}[H]
 \begin{threeparttable}
@@ -1578,7 +1577,7 @@ Y_{k,a} &=& \lambda_{0} + \lambda_{1} Y_{k,a-1} + \varepsilon_{a} \label{eq:line
 
 \subsection{Procedures for Selecting Background Variables, Estimated Treatment Effects, and Estimated Combining Functions} \label{appendix:results}
 
-\noindent In this appendix we first explain our method for selecting the background variables that we control for when estimating treatment effects.\footnote{This is a separate discussion from the selection of variables to forecast life-cycle profiles of labor income and other outcomes. For that discussion see Appendix~\ref{appendix:methodology}. \textbf{[TR: Appendix C.3.4 specifically]}} Then, we present the treatment effects of the center-based treatment in ABC/CARE estimates for the 95 main outcomes we consider. For each set of estimates, we first present a summary of the effect of the program using a combining function counting the number of socially positive treatment effects. We then present tables of treatment effect estimates for each outcome. Finally, we test for statistically significant treatment effects using the step-down procedure to test multiple hypotheses.\\
+\noindent In this appendix we first explain our method for selecting the background variables that we control for when estimating treatment effects.\footnote{This is a separate discussion from the selection of variables to forecast life-cycle profiles of labor income and other outcomes. For that discussion see Appendix~\ref{appendix:pred}.} Then, we present the treatment effects of the center-based treatment in ABC/CARE estimates for the 95 main outcomes we consider. For each set of estimates, we first present a summary of the effect of the program using a combining function counting the number of socially positive treatment effects. We then present tables of treatment effect estimates for each outcome. Finally, we test for statistically significant treatment effects using the step-down procedure to test multiple hypotheses.\\
 
 \paragraph{Background Variables} \label{appendix:bvariables}
 
